--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "miniraw"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
 edition = "2018"
 
+[profile.release]
+lto = true
+opt-level = "z"
+
 [dependencies]
-winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
-widestring = "0.4"
 log = { version = "0.4", features = ["std"] }
+futures = "0.1"
 time = "0.1"
 tokio = { version = "0.1", features = ["fs"] }
-futures = "0.1"
+widestring = "0.4"
+winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
