--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "miniraw"
-version = "1.0.2"
+version = "1.0.3"
 authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
 edition = "2018"
 
@@ -10,8 +10,7 @@ opt-level = "z"
 
 [dependencies]
 log = { version = "0.4", features = ["std"] }
-futures = "0.1"
+async-std = "0.99"
 time = "0.1"
-tokio = { version = "0.1", features = ["fs"] }
 widestring = "0.4"
 winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
