--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ opt-level = "z"
 
 [dependencies]
 log = { version = "0.4", features = ["std"] }
-async-std = "0.99"
+tokio = "0.2.0-alpha.6"
+futures-preview= "0.3.0-alpha.19"
 time = "0.1"
 widestring = "0.4"
 winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
