--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [profile.release]
 lto = true
 opt-level = "z"
+panic = "abort"
 
 [dependencies]
 log = { version = "0.4", features = ["std"] }
