--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ panic = "abort"
 
 [dependencies]
 log = { version = "0.4", features = ["std"] }
-tokio = { version = "0.3", features = ["net", "fs", "rt-multi-thread", "io-util", "macros", "stream"] }
-futures-util = "0.3"
+tokio = { version = "1", features = ["net", "fs", "rt-multi-thread", "io-util", "macros"] }
 time = "0.2"
 widestring = "0.4"
 winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
