--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ log = { version = "0.4", features = ["std"] }
 time = { version = "0.3", default-features = false, features = ["std", "local-offset"] }
 widestring = "0.5"
 windows = { version = "0.24", features = [
-    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }
+    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi",
+    "Win32_System_Registry"] }
 
 [build-dependencies]
 embed-resource = "1"
