--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ panic = "abort"
 log = { version = "0.4", features = ["std"] }
 time = { version = "0.3", default-features = false, features = ["std", "local-offset"] }
 widestring = "0.5"
-windows = { version = "0.25", features = [
-    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi",
+windows = { version = "0.26", features = [
+    "std", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi",
     "Win32_System_Registry"] }
 
 [build-dependencies]
