--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ time = { version = "0.3", default-features = false, features = ["std", "local-of
 [dependencies.windows]
 git = "https://github.com/microsoft/windows-rs.git"
 features = [
-    "alloc", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader",
+    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader",
     "Win32_Graphics_Gdi", "Win32_System_Registry" ]
 
 [build-dependencies]
